# VSTestProject

./: CMakeLists.txt
Assets/Maps/: elorium.tmx  grassland.tsx  maze1_nw.tmx  passage_es.tmx  passage_esw.tmx  passage_ne.tmx  passage_nes.tmx  passage_ns.tmx  passage_s.tmx  room10_nsw.tmx  room12_ns.tmx  room13_esw.tmx  room13b_ew.tmx  room14_ns.tmx  room15_ne.tmx  room16_nw.tmx  room17_n.tmx  room18_ns.tmx  room1_ns.tmx  room2_ns.tmx  room4_es.tmx  room5b_ne.tmx  room6_esw.tmx  room7_ns.tmx  room8_nw.tmx  room_e.tmx  room_e2.tmx  room_ew.tmx  room_n.tmx  room_n3.tmx  room_s2.tmx  room_ws.tmx
Assets/NewMaps/: The Chase.tmx  acid_pools.tmx  arcadia.tmx  bobs_village.tmx  buildings.tsx  caverns.tmx  caves.tmx  elorium.tmx  fire_lands.tmx  ghosts_and_goblins.tmx  grasslands1.tmx  grasslands2.tmx  marker_tiles.tsx  objects.tsx  plant_life.tsx  platforms.tmx  room2room.tmx  straight_up.tmx  the_desert.tmx  the_hotel.tmx  tileset.tsx  tornado_alley.tmx  zombie_village.tmx
Assets/RockyWorld_v1.1/01. Rocky Level/: main_lev_build.tsx  map1.tmx
GameCore/Config/: AppConfig.cpp  AppConfig.h  Settings.cpp  Settings.h
GameCore/Core/: App.cpp  App.h  EndgameManager.cpp  EndgameManager.h  GameLevelManager.cpp  GameLevelManager.h  GameProgress.cpp  GameProgress.h  GameSceneManager.cpp  GameSceneManager.h  MainGame.cpp  MainGame.h
GameCore/Entities/: EntityManager.cpp  EntityManager.h  EntityStats.cpp  EntityStats.h  EntityUtils.cpp  EntityUtils.h  SpriteDescriptor.cpp  SpriteDescriptor.h
GameCore/Entities/Characters/: Decoration.cpp  Decoration.h
GameCore/Entities/Components/: AnimationComponent.h  CollisionCallback.h  CollisionListener.h  EntityManagerComponent.h  SpriteProperties.cpp  SpriteProperties.h
GameCore/Entities/Hero/: ButtonInputHandler.cpp  ButtonInputHandler.h  CollisionHandler.cpp  CollisionHandler.h  MainPlayer.cpp  MainPlayer.h
GameCore/Entities/Managers/: DecorationsManager.cpp  DecorationsManager.h  GenericEntityManager.cpp  GenericEntityManager.h  ManagerUtils.cpp  ManagerUtils.h  PlayerManager.cpp  PlayerManager.h
GameCore/Entities/Objects/: BoundedEnemy.cpp  BoundedEnemy.h  GdxSprite.cpp  GdxSprite.h
GameCore/Entities/Systems/: EntityData.cpp  EntityData.h  RenderSystem.cpp  RenderSystem.h
GameCore/Graphics/: BaseRenderer.cpp  BaseRenderer.h  FadeEffect.cpp  FadeEffect.h  GFXSetup.cpp  GFXSetup.h  GameResources.h  Gfx.cpp  Gfx.h  OrthoGameCamera.cpp  OrthoGameCamera.h  StarField.cpp  StarField.h  StarObject.cpp  StarObject.h  WindowUtils.cpp  WindowUtils.h
GameCore/Input/: InputManager.cpp  InputManager.h
GameCore/Maps/: MapCreator.cpp  MapCreator.h  MapData.cpp  MapData.h  MapUtils.cpp  MapUtils.h  ObjectTileProperties.cpp  ObjectTileProperties.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  Room_Defines.h
GameCore/Physics/: BoxCollision.cpp  BoxCollision.h  CollisionObject.cpp  CollisionObject.h  GenericCollisionListener.cpp  GenericCollisionListener.h
GameCore/Scenes/: GameScene.cpp  GameScene.h  SceneBase.h  SceneManager.cpp  SceneManager.h  TitleScene.cpp  TitleScene.h
GameCore/UI/: HeadsUpDisplay.cpp  HeadsUpDisplay.h  ItemBar.cpp  ItemBar.h  MessageManager.cpp  MessageManager.h  ProgressBar.cpp  ProgressBar.h
LibUtils/: Application.cpp  Application.h
LibUtils/GDX/Graphics/: Animation.cpp  Animation.h  Color.cpp  Color.h  TextureManager.cpp  TextureManager.h  TextureRegion.cpp  TextureRegion.h
LibUtils/GDX/Graphics/Primitives/: Lines.cpp  Lines.h  Points.cpp  Points.h  Triangles.cpp  Triangles.h
LibUtils/GDX/Graphics/Types/: Drawable2D.cpp  Drawable2D.h  RectangleShape.cpp  RectangleShape.h  Shape.cpp  Shape.h  Transform.cpp  Transform.h
LibUtils/GDX/Input/: Input.cpp  Input.h  Switch.cpp  Switch.h
LibUtils/GDX/Maths/: BoundsBox.cpp  BoundsBox.h  Box.cpp  Box.h  Item.cpp  Item.h  ItemF.cpp  ItemF.h  Matrix4.h  NumberUtils.cpp  NumberUtils.h  Point.h  Rectangle.cpp  Rectangle.h  SimpleLine2D.cpp  SimpleLine2D.h  SimpleVec2.cpp  SimpleVec2.h  SimpleVec2F.cpp  SimpleVec2F.h  SimpleVec3.cpp  SimpleVec3.h  SimpleVec3F.cpp  SimpleVec3F.h  Vec2.h  Vec3.h  Vec4.h  Vector.cpp  Vector.h
LibUtils/GDX/Physics/: CollisionUtils.cpp  CollisionUtils.h  Direction.cpp  Direction.h  DirectionComponent.cpp  DirectionComponent.h  Movement.cpp  Movement.h
LibUtils/GDX/System/: CpuUsage.cpp  CpuUsage.h  FPSCounter.cpp  FPSCounter.h
LibUtils/GDX/Utils/: Bitmask.cpp  Bitmask.h  StateManager.cpp  StateManager.h  Stats.cpp  Stats.h  Trace.cpp  Trace.h  Utils.h  WorkingDirectory.cpp  WorkingDirectory.h
LibUtils/TMX/: FreeFuncs.cpp  FreeFuncs.hpp  ImageLayer.cpp  ImageLayer.hpp  Layer.hpp  LayerGroup.cpp  LayerGroup.hpp  Map.cpp  Map.hpp  MapObject.cpp  MapObject.hpp  ObjectGroup.cpp  ObjectGroup.hpp  OrthoMapLayer.cpp  OrthoMapLayer.h  Property.cpp  Property.hpp  TileLayer.cpp  TileLayer.hpp  Tileset.cpp  Tileset.hpp  miniz.c
LibUtils/TMX/detail/: Log.hpp  pugixml.cpp
Shared/Enums/: ActionStates.h  GameStates.h  GraphicID.h  ScreenID.h  Stack.h  TaskType.h  TileID.h  Translations.cpp  Translations.h
Shared/SharedData/: GlobalDefines.h  Types.h
