cmake_minimum_required(VERSION 3.21)

set(PROJECT_NAME VSTestProject)
set(CMAKE_CXX_STANDARD 20)

project(${PROJECT_NAME})

set(${PROJECT_NAME}_VERSION_MAJOR 1)
set(${PROJECT_NAME}_VERSION_MINOR 0)

include_directories(GameCore)
include_directories(LibUtils)
include_directories(Shared/Enums)
include_directories(Shared/SharedData)
include_directories(LibUtils/SFML/include)
include_directories(LibUtils/Box2D/include)

link_directories(${PROJECT_NAME}/LibUtils/SFML/lib)

add_executable(${PROJECT_NAME}
        GameCore/Core/App.cpp
        GameCore/Core/App.h
        GameCore/Config/AppConfig.cpp
        GameCore/Config/AppConfig.h
        GameCore/Core/EndgameManager.cpp
        GameCore/Core/EndgameManager.h
        GameCore/Core/GameLevelManager.cpp
        GameCore/Core/GameLevelManager.h
        GameCore/Core/GameProgress.cpp
        GameCore/Core/GameProgress.h
        GameCore/Core/GameSceneManager.cpp
        GameCore/Core/GameSceneManager.h
        GameCore/Core/MainGame.cpp
        GameCore/Core/MainGame.h
        GameCore/Entities/Characters/Decoration.cpp
        GameCore/Entities/Characters/Decoration.h
        GameCore/Entities/Components/AnimationComponent.h
        GameCore/Entities/Components/CollisionCallback.h
        GameCore/Entities/Components/EntityManagerComponent.h
        GameCore/Entities/Hero/ButtonInputHandler.cpp
        GameCore/Entities/Hero/ButtonInputHandler.h
        GameCore/Entities/Hero/CollisionHandler.cpp
        GameCore/Entities/Hero/CollisionHandler.h
        GameCore/Entities/Hero/MainPlayer.cpp
        GameCore/Entities/Hero/MainPlayer.h
        GameCore/Entities/Managers/DecorationsManager.cpp
        GameCore/Entities/Managers/DecorationsManager.h
        GameCore/Entities/Managers/GenericEntityManager.cpp
        GameCore/Entities/Managers/GenericEntityManager.h
        GameCore/Entities/Managers/ManagerUtils.cpp
        GameCore/Entities/Managers/ManagerUtils.h
        GameCore/Entities/Managers/PlayerManager.cpp
        GameCore/Entities/Managers/PlayerManager.h
        GameCore/Entities/Objects/BoundedEnemy.cpp
        GameCore/Entities/Objects/BoundedEnemy.h
        GameCore/Entities/Systems/RenderSystem.cpp
        GameCore/Entities/Systems/RenderSystem.h
        GameCore/Entities/EntityManager.cpp
        GameCore/Entities/EntityManager.h
        GameCore/Entities/EntityStats.cpp
        GameCore/Entities/EntityStats.h
        GameCore/Entities/EntityUtils.cpp
        GameCore/Entities/EntityUtils.h
        GameCore/Entities/Objects/GdxSprite.cpp
        GameCore/Entities/Objects/GdxSprite.h
        GameCore/Entities/SpriteDescriptor.cpp
        GameCore/Entities/SpriteDescriptor.h
        GameCore/Graphics/BaseRenderer.cpp
        GameCore/Graphics/BaseRenderer.h
        GameCore/Graphics/FadeEffect.cpp
        GameCore/Graphics/FadeEffect.h
        GameCore/Graphics/GameResources.cpp
        GameCore/Graphics/GameResources.h
        GameCore/Graphics/Gfx.cpp
        GameCore/Graphics/Gfx.h
        GameCore/Graphics/GFXSetup.cpp
        GameCore/Graphics/GFXSetup.h
        GameCore/Graphics/OrthoGameCamera.cpp
        GameCore/Graphics/OrthoGameCamera.h
        GameCore/Graphics/StarField.cpp
        GameCore/Graphics/StarField.h
        GameCore/Graphics/StarObject.cpp
        GameCore/Graphics/StarObject.h
        GameCore/Graphics/WindowUtils.cpp
        GameCore/Graphics/WindowUtils.h
        GameCore/Input/InputManager.cpp
        GameCore/Input/InputManager.h
        GameCore/Maps/MapCreator.cpp
        GameCore/Maps/MapCreator.h
        GameCore/Maps/MapData.cpp
        GameCore/Maps/MapData.h
        GameCore/Maps/MapUtils.cpp
        GameCore/Maps/MapUtils.h
        GameCore/Maps/ObjectTileProperties.cpp
        GameCore/Maps/ObjectTileProperties.h
        GameCore/Maps/Room.cpp
        GameCore/Maps/Room.h
        GameCore/Maps/Room_Defines.h
        GameCore/Maps/RoomManager.cpp
        GameCore/Maps/RoomManager.h
        GameCore/Physics/BoxCollision.cpp
        GameCore/Physics/BoxCollision.h
        GameCore/Physics/CollisionObject.cpp
        GameCore/Physics/CollisionObject.h
        GameCore/Physics/GenericCollisionListener.cpp
        GameCore/Physics/GenericCollisionListener.h
        GameCore/Scenes/GameScene.cpp
        GameCore/Scenes/GameScene.h
        GameCore/Scenes/SceneBase.h
        GameCore/Scenes/SceneManager.cpp
        GameCore/Scenes/SceneManager.h
        GameCore/Scenes/TitleScene.cpp
        GameCore/Scenes/TitleScene.h
        GameCore/UI/HeadsUpDisplay.cpp
        GameCore/UI/HeadsUpDisplay.h
        GameCore/UI/ItemBar.cpp
        GameCore/UI/ItemBar.h
        GameCore/UI/MessageManager.cpp
        GameCore/UI/MessageManager.h
        GameCore/UI/ProgressBar.cpp
        GameCore/UI/ProgressBar.h
        LibUtils/GDX/Graphics/Primitives/Lines.cpp
        LibUtils/GDX/Graphics/Primitives/Lines.h
        LibUtils/GDX/Graphics/Primitives/Points.cpp
        LibUtils/GDX/Graphics/Primitives/Points.h
        LibUtils/GDX/Graphics/Primitives/Triangles.cpp
        LibUtils/GDX/Graphics/Primitives/Triangles.h
        LibUtils/GDX/Graphics/Types/Drawable2D.cpp
        LibUtils/GDX/Graphics/Types/Drawable2D.h
        LibUtils/GDX/Graphics/Types/RectangleShape.cpp
        LibUtils/GDX/Graphics/Types/RectangleShape.h
        LibUtils/GDX/Graphics/Types/Shape.cpp
        LibUtils/GDX/Graphics/Types/Shape.h
        LibUtils/GDX/Graphics/Types/Transform.cpp
        LibUtils/GDX/Graphics/Types/Transform.h
        LibUtils/GDX/Graphics/Animation.cpp
        LibUtils/GDX/Graphics/Animation.h
        LibUtils/GDX/Graphics/Color.cpp
        LibUtils/GDX/Graphics/Color.h
        LibUtils/GDX/Graphics/TextureManager.cpp
        LibUtils/GDX/Graphics/TextureManager.h
        LibUtils/GDX/Graphics/TextureRegion.cpp
        LibUtils/GDX/Graphics/TextureRegion.h
        LibUtils/GDX/Input/Input.cpp
        LibUtils/GDX/Input/Input.h
        LibUtils/GDX/Input/Switch.cpp
        LibUtils/GDX/Input/Switch.h
        LibUtils/GDX/Maths/BoundsBox.cpp
        LibUtils/GDX/Maths/BoundsBox.h
        LibUtils/GDX/Maths/Box.cpp
        LibUtils/GDX/Maths/Box.h
        LibUtils/GDX/Maths/Item.cpp
        LibUtils/GDX/Maths/Item.h
        LibUtils/GDX/Maths/ItemF.cpp
        LibUtils/GDX/Maths/ItemF.h
        LibUtils/GDX/Maths/Matrix4.cpp
        LibUtils/GDX/Maths/Matrix4.h
        LibUtils/GDX/Maths/NumberUtils.cpp
        LibUtils/GDX/Maths/NumberUtils.h
        LibUtils/GDX/Maths/Point.h
        LibUtils/GDX/Maths/Rectangle.cpp
        LibUtils/GDX/Maths/Rectangle.h
        LibUtils/GDX/Maths/SimpleLine2D.cpp
        LibUtils/GDX/Maths/SimpleLine2D.h
        LibUtils/GDX/Maths/SimpleVec2.cpp
        LibUtils/GDX/Maths/SimpleVec2.h
        LibUtils/GDX/Maths/SimpleVec2F.cpp
        LibUtils/GDX/Maths/SimpleVec2F.h
        LibUtils/GDX/Maths/SimpleVec3.cpp
        LibUtils/GDX/Maths/SimpleVec3.h
        LibUtils/GDX/Maths/Vec2.h
        LibUtils/GDX/Maths/Vec3.h
        LibUtils/GDX/Maths/Vec4.h
        LibUtils/GDX/Maths/Vector.cpp
        LibUtils/GDX/Maths/Vector.h
        LibUtils/GDX/Physics/CollisionUtils.cpp
        LibUtils/GDX/Physics/CollisionUtils.h
        LibUtils/GDX/Physics/Direction.cpp
        LibUtils/GDX/Physics/Direction.h
        LibUtils/GDX/Physics/DirectionComponent.cpp
        LibUtils/GDX/Physics/DirectionComponent.h
        LibUtils/GDX/Physics/Movement.cpp
        LibUtils/GDX/Physics/Movement.h
        LibUtils/GDX/System/CpuUsage.cpp
        LibUtils/GDX/System/CpuUsage.h
        LibUtils/GDX/System/FPSCounter.cpp
        LibUtils/GDX/System/FPSCounter.h
        LibUtils/GDX/Utils/Bitmask.cpp
        LibUtils/GDX/Utils/Bitmask.h
        LibUtils/GDX/Utils/StateManager.cpp
        LibUtils/GDX/Utils/StateManager.h
        LibUtils/GDX/Utils/Stats.cpp
        LibUtils/GDX/Utils/Stats.h
        LibUtils/GDX/Utils/Trace.cpp
        LibUtils/GDX/Utils/Trace.h
        LibUtils/GDX/Utils/Utils.cpp
        LibUtils/GDX/Utils/Utils.h
        LibUtils/GDX/Utils/WorkingDirectory.cpp
        LibUtils/GDX/Utils/WorkingDirectory.h
        LibUtils/TMX/detail/Android.hpp
        LibUtils/TMX/detail/Log.hpp
        LibUtils/TMX/detail/pugiconfig.hpp
        LibUtils/TMX/detail/pugixml.cpp
        LibUtils/TMX/detail/pugixml.hpp
        LibUtils/TMX/Config.hpp
        LibUtils/TMX/FreeFuncs.cpp
        LibUtils/TMX/FreeFuncs.hpp
        LibUtils/TMX/ImageLayer.cpp
        LibUtils/TMX/ImageLayer.hpp
        LibUtils/TMX/Layer.hpp
        LibUtils/TMX/LayerGroup.cpp
        LibUtils/TMX/LayerGroup.hpp
        LibUtils/TMX/Map.cpp
        LibUtils/TMX/Map.hpp
        LibUtils/TMX/MapObject.cpp
        LibUtils/TMX/MapObject.hpp
        LibUtils/TMX/miniz.c
        LibUtils/TMX/miniz.h
        LibUtils/TMX/ObjectGroup.cpp
        LibUtils/TMX/ObjectGroup.hpp
        LibUtils/TMX/OrthoMapLayer.cpp
        LibUtils/TMX/OrthoMapLayer.h
        LibUtils/TMX/Property.cpp
        LibUtils/TMX/Property.hpp
        LibUtils/TMX/TileLayer.cpp
        LibUtils/TMX/TileLayer.hpp
        LibUtils/TMX/Tileset.cpp
        LibUtils/TMX/Tileset.hpp
        LibUtils/TMX/Types.hpp
        LibUtils/TMX/Types.inl
        LibUtils/Application.cpp
        LibUtils/Application.h
        LibUtils/Box2D/src/collision/b2_broad_phase.cpp
        LibUtils/Box2D/src/collision/b2_chain_shape.cpp
        LibUtils/Box2D/src/collision/b2_circle_shape.cpp
        LibUtils/Box2D/src/collision/b2_collide_circle.cpp
        LibUtils/Box2D/src/collision/b2_collide_edge.cpp
        LibUtils/Box2D/src/collision/b2_collide_polygon.cpp
        LibUtils/Box2D/src/collision/b2_collision.cpp
        LibUtils/Box2D/src/collision/b2_distance.cpp
        LibUtils/Box2D/src/collision/b2_dynamic_tree.cpp
        LibUtils/Box2D/src/collision/b2_edge_shape.cpp
        LibUtils/Box2D/src/collision/b2_polygon_shape.cpp
        LibUtils/Box2D/src/collision/b2_time_of_impact.cpp
        LibUtils/Box2D/src/common/b2_block_allocator.cpp
        LibUtils/Box2D/src/common/b2_draw.cpp
        LibUtils/Box2D/src/common/b2_math.cpp
        LibUtils/Box2D/src/common/b2_settings.cpp
        LibUtils/Box2D/src/common/b2_stack_allocator.cpp
        LibUtils/Box2D/src/common/b2_timer.cpp
        LibUtils/Box2D/src/dynamics/b2_body.cpp
        LibUtils/Box2D/src/dynamics/b2_chain_circle_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_chain_circle_contact.h
        LibUtils/Box2D/src/dynamics/b2_chain_polygon_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_chain_polygon_contact.h
        LibUtils/Box2D/src/dynamics/b2_circle_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_circle_contact.h
        LibUtils/Box2D/src/dynamics/b2_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_contact_manager.cpp
        LibUtils/Box2D/src/dynamics/b2_contact_solver.cpp
        LibUtils/Box2D/src/dynamics/b2_contact_solver.h
        LibUtils/Box2D/src/dynamics/b2_distance_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_edge_circle_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_edge_circle_contact.h
        LibUtils/Box2D/src/dynamics/b2_edge_polygon_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_edge_polygon_contact.h
        LibUtils/Box2D/src/dynamics/b2_fixture.cpp
        LibUtils/Box2D/src/dynamics/b2_friction_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_gear_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_island.cpp
        LibUtils/Box2D/src/dynamics/b2_island.h
        LibUtils/Box2D/src/dynamics/b2_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_motor_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_mouse_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_polygon_circle_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_polygon_circle_contact.h
        LibUtils/Box2D/src/dynamics/b2_polygon_contact.cpp
        LibUtils/Box2D/src/dynamics/b2_polygon_contact.h
        LibUtils/Box2D/src/dynamics/b2_prismatic_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_pulley_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_revolute_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_weld_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_wheel_joint.cpp
        LibUtils/Box2D/src/dynamics/b2_world.cpp
        LibUtils/Box2D/src/dynamics/b2_world_callbacks.cpp
        LibUtils/Box2D/src/rope/b2_rope.cpp
        Shared/Enums/ActionStates.h
        Shared/Enums/GameStates.h
        Shared/Enums/GraphicID.h
        Shared/Enums/ScreenID.h
        Shared/Enums/Stack.h
        Shared/Enums/TaskType.h
        Shared/Enums/TileID.h
        Shared/Enums/Translations.cpp
        Shared/Enums/Translations.h
        Shared/SharedData/GlobalDefines.h
        Shared/SharedData/Types.h LibUtils/GDX/Maths/SimpleVec3F.cpp LibUtils/GDX/Maths/SimpleVec3F.h GameCore/Config/Settings.cpp GameCore/Config/Settings.h GameCore/Entities/Systems/EntityData.cpp GameCore/Entities/Systems/EntityData.h)
